# SimpleClient

./: CMakeLists.txt  README.md
src/: Message.hpp  main.cpp
src/Crypto/AES/: AES.hpp
src/Crypto/BASE64/: Base64.hpp
src/Crypto/ChaCha20/: ChaCha20.hpp
src/Crypto/EC/: EC.hpp
src/Crypto/HASH/: SHA256.hpp
